--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
                 <!-- Header -->
                 <div id="Header" class="fixed-top">
                     <!-- Logo -->
-                    <div id="Logo">
+                    <a id="Logo" href="https://zayaans.github.io/TheMovieSearchBox/">
                         <h1 id="LogoText1" class="heading">the movie</h1>
                         <img src="images/logo.png" />
                         <h1 id="LogoText2" class="heading">search box</h1>
-                    </div>
+                    </a>
                     <!-- Search Div -->
                     <div id="SearchDiv">
                         <input type="text" name="SearchInput" id="SearchInput" placeholder="Search Movie Title" oninput="QuickSearch();" />
